from enum import StrEnum


class EconomicConditions(StrEnum):
    RISE: str = "Rise"
    PEAK: str = "Peak"
    RECESSION: str = "Recession"
    CRISIS: str = "Crisis"
